--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="StartTheme" parent="AppTheme">
+        <item name="android:windowBackground">@mipmap/welcome</item>
+    </style>
 </resources>
