--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.MainActivity">
 
-    <TextView
-        android:id="@+id/tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <include layout="@layout/view_title" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/btn_dagger_mvp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="@string/text_dagger_mvp"
+        android:layout_marginTop="10dp"/>
+
+    <Button
+        android:id="@+id/btn_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="@string/text_text_leftorright"
+        android:layout_marginTop="10dp"/>
+
+</LinearLayout>
