--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,4 +22,11 @@
         android:text="@string/text_text_leftorright"
         android:layout_marginTop="10dp"/>
 
+    <Button
+        android:id="@+id/btn_text_chart"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="@string/text_chart"
+        android:layout_marginTop="10dp"/>
+
 </LinearLayout>
