--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,5 +28,11 @@
         android:layout_height="50dp"
         android:text="@string/text_chart"
         android:layout_marginTop="10dp"/>
+    <Button
+        android:id="@+id/btn_text_seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/text_size"
+        android:layout_marginTop="10dp"/>
 
 </LinearLayout>
